--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,4 +2,5 @@
     <string name="app_name">KotlinSuitMedia</string>
     <string name="next">Next</string>
     <string name="name">Name</string>
+    <string name="nama">Nama :</string>
 </resources>
